Bug 778453 - Limit the framebuffer rect size to prevent crash. r=BenWa, a=leo+